corpus/tests.txt
================================================================================
empty block
================================================================================
{}
--------------------------------------------------------------------------------

(source_file 
  (eval_block))

================================================================================
number in block
================================================================================
{ 1 }
--------------------------------------------------------------------------------

(source_file 
  (eval_block
    (ERROR
      (number))))

================================================================================
string in block
================================================================================
{ "str" }
--------------------------------------------------------------------------------

(source_file 
  (eval_block
    (ERROR
      (string))))

================================================================================
function call one string arg
================================================================================
{fn("var")}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (string)
        (close_paren)))))

================================================================================
function call two string args
================================================================================
{fn("var", "var")}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (string)
        (string)
        (close_paren)))))

================================================================================
function call three string args
================================================================================
{fn("var", "var", "var")}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (string)
        (string)
        (string)
        (close_paren)))))

================================================================================
function call one number arg
================================================================================
{fn(1)}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (number)
        (close_paren)))))


================================================================================
function call two number args
================================================================================
{fn(1, 1)}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (number)
        (number)
        (close_paren)))))

================================================================================
function call one property arg
================================================================================
{fn(prop.val)}
--------------------------------------------------------------------------------

(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident))
        (close_paren)))))

================================================================================
one block with top text
================================================================================
top text
{fn(prop.val)}
--------------------------------------------------------------------------------
(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident))
        (close_paren)))))


================================================================================
one block with bottom text
================================================================================
{fn(prop.val)}
bottom text
--------------------------------------------------------------------------------
(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident))
        (close_paren)))))

================================================================================
two blocks with top text
================================================================================
top text
{fn(prop.val)}
{fn(prop.val)}
--------------------------------------------------------------------------------
(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident)
        )
        (close_paren))))
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident)
        )
        (close_paren)))))
          
================================================================================
two blocks with bottom text
================================================================================
{fn(prop.val)}
{fn(prop.val)}
bottom text
--------------------------------------------------------------------------------
(source_file
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident)
        )
        (close_paren))))
  (eval_block
    (fn
      (ident)
      (arguments
        (open_paren)
        (property
          (ident)
          (ident)
        )
        (close_paren)))))
